 - gui: added renderer::set_view() to allow arbitrary view transforms
 - gui: added color::from_hsv and color::to_hsv
 - gui: renamed gui::manager_impl into gui::renderer_impl
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::on_script
 - gui: renamed color::chanel to color::channel
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: sprite is now a value type
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a renderer
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added gui::down_cast for safer down casting
 - gui: removed clear_links() in favor of using destructors
 - gui: added mechanism to handle most cases where a widget is destroyed in a callback
 - gui: relative sizing is now only applicable to XML <Size>
 - gui: added OnReceiveDrag for frame
 - gui: added OnCursorChanged for edit_box
 - gui: added OnUpPressed and OnDownPressed callbacks to edit_box
 - gui: added set_cursor_position()/get_cursor_position() to edit_box
 - gui: added clear_history() to edit_box
 - gui: added clipboard support to edit_box
 - gui: added automatic un-focus of edit_box when clicking outside of the box
 - gui: added vertex_cache to speed up text rendering (only available with OpenGL renderer)
 - gui: fixed rare crash in edit_box
 - gui: fixed crash when calling Lua delete_frame() twice on same frame
 - gui: fixed Lua get_width()/get_height() returning incorrect values