@@ -1475,7 +1475,7 @@ void frame::set_max_height(uint uiMaxHeight)
         uiMaxHeight_ = uiMaxHeight;
 
     if (uiMaxHeight_ != uiMaxHeight)
-        fire_update_borders();
+        notify_borders_need_update();
 }
 
 void frame::set_max_width(uint uiMaxWidth)
@@ -1484,7 +1484,7 @@ void frame::set_max_width(uint uiMaxWidth)
         uiMaxWidth_ = uiMaxWidth;
 
     if (uiMaxWidth_ != uiMaxWidth)
-        fire_update_borders();
+        notify_borders_need_update();
 }
 
 void frame::set_min_height(uint uiMinHeight)
@@ -1493,7 +1493,7 @@ void frame::set_min_height(uint uiMinHeight)
         uiMinHeight_ = uiMinHeight;
 
     if (uiMinHeight_ != uiMinHeight)
-        fire_update_borders();
+        notify_borders_need_update();
 }
 
 void frame::set_min_width(uint uiMinWidth)
@@ -1502,7 +1502,7 @@ void frame::set_min_width(uint uiMinWidth)
         uiMinWidth_ = uiMinWidth;
 
     if (uiMinWidth_ != uiMinWidth)
-        fire_update_borders();
+        notify_borders_need_update();
 }
 
 void frame::set_movable(bool bIsMovable)
@@ -1523,7 +1523,7 @@ void frame::set_parent(frame* pParent)
 
     pParent_ = pParent;
 
-    fire_update_borders();
+    notify_borders_need_update();
 }
 
 std::unique_ptr<uiobject> frame::release_from_parent()
