@@ -1406,7 +1406,7 @@ void manager::on_event(const event& mEvent)
         {
             if (!pObject->is_virtual())
             {
-                pObject->fire_update_borders();
+                pObject->notify_borders_need_update();
                 pObject->notify_renderer_need_redraw();
             }
         }
@@ -1462,7 +1462,7 @@ void manager::on_event(const event& mEvent)
             if (pApplyConstraintFunc_)
                 pApplyConstraintFunc_();
 
-            pMovedObject_->fire_update_borders();
+            pMovedObject_->notify_borders_need_update();
         }
         else if (pSizedObject_)
         {
